--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -93,7 +93,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Nous avons pour principal cible les entreprises soucieuses de travailler en collaboration avec
+des partenaires qui leur offrent les meilleurs rapports qualité-prix.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -116,9 +117,9 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Service 3</h4>
+                    <h4 class="service-heading">Computer Maintenance</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
             </div>
@@ -131,7 +132,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Products</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Nos produits ne sont vendus qu’à l’état neuf, vous garantissant ainsi un meilleur rendement.</h3>
                 </div>
             </div>
             <div class="row">
@@ -229,7 +230,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Wizards Technology est une entreprise spécialisée dans la vente et le développement
+des solutions informatiques.</h3>
                 </div>
             </div>
         </div>
@@ -238,31 +240,34 @@
     <!-- Partners Aside -->
     <id id="partners"></id>
         <aside class="clients bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="{% static 'img/logos/envato.jpg' %}" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="{% static 'img/logos/designmodo.jpg' %}" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="{% static 'img/logos/themeforest.jpg' %}" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="{% static 'img/logos/creative-market.jpg' %}" class="img-responsive img-centered" alt="">
-                    </a>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Our Partner</h2>
+                        <div class="col-md-3 col-sm-6">
+                            <a href="#">
+                                <img src="{% static 'img/logos/envato.jpg' %}" class="img-responsive img-centered" alt="">
+                            </a>
+                        </div>
+                        <!--<div class="col-md-3 col-sm-6">
+                            <a href="#">
+                                <img src="{% static 'img/logos/designmodo.jpg' %}" class="img-responsive img-centered" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <a href="#">
+                                <img src="{% static 'img/logos/themeforest.jpg' %}" class="img-responsive img-centered" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <a href="#">
+                                <img src="{% static 'img/logos/creative-market.jpg' %}" class="img-responsive img-centered" alt="">
+                            </a>
+                        </div>-->
+                    </div>
                 </div>
             </div>
-        </div>
-    </aside>
+        </aside>
     </id>
 
     <!-- Contact Section -->
@@ -314,6 +319,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
+                    <ul class="list-inline contacts">
+                        <li><i class="fa fa-envelope">&nbsp;P.O. Box: 8994 Deido, Douala Cameroon&nbsp;&nbsp;|</i></li>
+                        <li><i class="fa fa-phone">&nbsp;+237 334 156 55&nbsp;&nbsp;|</i></li>
+                        <li><i class="fa fa-mobile">&nbsp;+237 699 011 293</i></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
                     <span class="copyright">Copyright &copy; Wizards Technology 2016</span>
                 </div>
                 <div class="col-md-4">
@@ -326,6 +338,7 @@
                         </li>
                     </ul>
                 </div>
+
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
