--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -246,7 +246,7 @@ des solutions informatiques.</h3>
                         <h2 class="section-heading">Our Partner</h2>
                         <div class="col-md-3 col-sm-6">
                             <a href="#">
-                                <img src="{% static 'img/logos/envato.jpg' %}" class="img-responsive img-centered" alt="">
+                                <img src="{% static 'img/logos/branding_lenovo-logo.jpg' %}" class="img-responsive img-centered" alt="">
                             </a>
                         </div>
                         <!--<div class="col-md-3 col-sm-6">
