--- a/intro/static/css/wt.css
+++ b/intro/static/css/wt.css
@@ -62,6 +62,11 @@
     background: rgba(251,19,19,0.68);
 }
 
+/* Partner */
+div.col-md-3.col-sm-6 {
+    width: 100%;
+}
+
 /* Footer */
 ul.list-inline.quicklinks a {
     color: #c1c1c1;
