--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -243,7 +243,7 @@ des solutions informatiques.</h3>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Our Partner</h2>
+                        <h2 class="section-heading">Our Partners</h2>
                         <div class="col-md-3 col-sm-6">
                             <a href="#">
                                 <img src="{% static 'img/logos/branding_lenovo-logo.jpg' %}" class="img-responsive img-centered" alt="">
