--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -281,7 +281,10 @@ des solutions informatiques.</h3>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    {% block content %}
+                    <form name="sentMessage" id="contactForm" novalidate action="" method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -307,6 +310,7 @@ des solutions informatiques.</h3>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Send Message</button>
+                                {% endblock %}
                             </div>
                         </div>
                     </form>
@@ -544,8 +548,8 @@ des solutions informatiques.</h3>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
-    <script src="{% static 'js/contact_me.js' %}"></script>
+    <!--<script src="{% static 'js/jqBootstrapValidation.js' %}"></script>-->
+    <!--<script src="{% static 'js/contact_me.js' %}"></script>-->
 
     <!-- Theme JavaScript -->
     <script src="{% static 'js/agency.min.js' %}"></script>
