--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -238,7 +238,7 @@ des solutions informatiques.</h3>
     </section>
 
     <!-- Partners Aside -->
-    <id id="partners"></id>
+    <id id="partners">
         <aside class="clients bg-light-gray">
             <div class="container">
                 <div class="row">
@@ -281,28 +281,45 @@ des solutions informatiques.</h3>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    {% block content %}
-                    <form name="sentMessage" id="contactForm" novalidate action="" method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
+
+                {% block content %}
+                    {% csrf_token %}
+
+                    {{ form.non_field_errors }}
+                    <form name="sentMessage" id="contactForm" novalidate method="post" action="">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+
+                                    {{ form.contact_name.errors }}
+                                    <!--<input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">-->
+                                    {{ form.contact_name }}
+
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+
+                                    {{ form.contact_email.errors }}
+                                    <!--<input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">-->
+                                    {{ form.contact_email }}
+
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+
+                                    {{ form.contact_phone.errors }}
+                                    <!--<input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">-->
+                                    {{ form.contact_phone }}
+
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+
+                                    {{ form.contact_message.errors }}
+                                    <!--<textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>-->
+                                    {{ form.contact_message }}
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -310,10 +327,12 @@ des solutions informatiques.</h3>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Send Message</button>
-                                {% endblock %}
                             </div>
                         </div>
                     </form>
+
+                {% endblock %}
+
                 </div>
             </div>
         </div>
