--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#partners">Partners</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="{% url 'intro' %}#contact" data-target="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -283,10 +283,12 @@ des solutions informatiques.</h3>
                 <div class="col-lg-12">
 
                 {% block content %}
-                    {% csrf_token %}
 
-                    {{ form.non_field_errors }}
                     <form name="sentMessage" id="contactForm" novalidate method="post" action="">
+
+                        {% csrf_token %}
+
+                    #{{ form.non_field_errors }}
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
