--- a/intro/static/css/wt.css
+++ b/intro/static/css/wt.css
@@ -106,3 +106,21 @@ ul.social-buttons li a:hover {
 .contacts  {
     font-size: 15px;
 }
+
+.messages {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    opacity: 0.9;
+    text-align: center;
+    background-color: rgba(255,255,100,0.5);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.messages p {
+    line-height: 2em;
+    vertical-align: middle;
+}
