--- a/intro/static/css/wt.css
+++ b/intro/static/css/wt.css
@@ -118,9 +118,33 @@ ul.social-buttons li a:hover {
     background-color: rgba(255,255,100,0.5);
     margin-left: auto;
     margin-right: auto;
+    transition: all 1s linear;
+    display: block;
+}
+
+.messages:hover {
+    display: none;
+    opacity: 0;
 }
 
 .messages p {
     line-height: 2em;
     vertical-align: middle;
+    /*position: fixed;*/
+}
+
+.errorlist {
+    /*list-style: none;*/
+    font-style: italic;
+    width: 100%;
+    padding: 0;
+
+    font-size: 80%;
+    color: orange;
+    /*background-color: #900;*/
+    border-radius: 0 0 0.2% 0.2%;
+
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
 }
