--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -31,9 +31,10 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!--<script src='https://www.google.com/recaptcha/api.js'></script>-->
 
 </head>
 
@@ -334,7 +335,16 @@ des solutions informatiques.</h3>
                                     {{ form.contact_message }}
                                     <p class="help-block text-danger"></p>
                                 </div>
+                                <!--<div class="g-recaptcha" data-sitekey="6Le5PQ4UAAAAAGZU8Wrffzkgc3DzBgtBWvU7RhSu"></div>-->
+
+                                <!--<div class="form-group">-->
+                                <!--{{ form.captcha.errors }}-->
+                                <!--{{ form.captcha }}-->
+                                <!--<p class="help-block text-danger"></p>-->
+                                <!--</div>-->
+
                             </div>
+
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
@@ -585,6 +595,7 @@ des solutions informatiques.</h3>
 
     <!-- Theme JavaScript -->
     <script src="{% static 'js/agency.min.js' %}"></script>
+    <script src="{% static 'js/wt.js' %}"></script>
 
 </body>
 
