--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load recaptcha2 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -35,7 +36,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--<script src='https://www.google.com/recaptcha/api.js'></script>-->
-
+    {% recaptcha_init %}
 </head>
 
 <body id="page-top" class="index">
@@ -337,11 +338,11 @@ des solutions informatiques.</h3>
                                 </div>
                                 <!--<div class="g-recaptcha" data-sitekey="6Le5PQ4UAAAAAGZU8Wrffzkgc3DzBgtBWvU7RhSu"></div>-->
 
-                                <!--<div class="form-group">-->
-                                <!--{{ form.captcha.errors }}-->
-                                <!--{{ form.captcha }}-->
-                                <!--<p class="help-block text-danger"></p>-->
-                                <!--</div>-->
+                                <div class="form-group">
+                                {{ form.captcha.errors }}
+                                {{ form.captcha }}
+                                <p class="help-block text-danger"></p>
+                                </div>
 
                             </div>
 
