--- a/intro/static/css/wt.css
+++ b/intro/static/css/wt.css
@@ -107,39 +107,32 @@ ul.social-buttons li a:hover {
     font-size: 15px;
 }
 
-.messages {
+/*.messages {
     display: block;
-    visibility: visible;
+    /*visibility: visible;*
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 10;
-    line-height: 2em;
     vertical-align: middle;
 
     -moz-opacity: 0.9;
     -webkit-opacity: 0.9;
     opacity: 0.9;
 
-    -webkit-transition: visibility 5s, opacity 5s ease-in-out;
-    -moz-transition: visibility 5s, opacity 5s ease-in-out;
-    -ms-transition: visibility 5s, opacity 5s ease-in-out;
-    -o-transition: visibility 5s, opacity 5s ease-in-out;
-    transition: visibility 5s, opacity 5s ease-in-out;
-
     text-align: center;
+
+    color: white;
+    font-style: italic;
+    font-weight: bold;
     background-color: rgba(255,255,100,0.5);
     margin-left: auto;
     margin-right: auto;
     
     
-}
+}*/
 
-.messages:hover {
-    visibility: none;
-    opacity: 0;
-}
 
 .errorlist {
     /*list-style: none;*/
@@ -156,4 +149,3 @@ ul.social-buttons li a:hover {
     box-sizing: border-box;
 
 }
-
