--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -41,15 +41,6 @@
 
 <body id="page-top" class="index">
 
-
-    {% if messages %}
-    <div class="messages">
-        {% for message in messages %}
-        <p>{{ message }}</p>
-        {% endfor %}
-    </div>
-    {% endif %}
-
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
@@ -297,7 +288,7 @@ des solutions informatiques.</h3>
 
                 {% block content %}
 
-                    <form role="form" name="sentMessage" id="contactForm" novalidate method="post" action="">
+                    <form role="form" name="sentMessage" id="contactForm" novalidate method="post" action="{% url "intro" %}">
 
                         {% csrf_token %}
 
@@ -348,8 +339,19 @@ des solutions informatiques.</h3>
 
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <div id="success">
+
+                                    {% if messages %}
+                                    <div class="alert alert-success">
+                                        {% for message in messages %}
+                                        <button class="close" type="button" data-dismiss="alert" aria-hidden="true">×</button>
+                                        <strong>{{ message }}</strong>
+                                        {% endfor %}
+                                    </div>
+                                    {% endif %}
+
+                                </div>
+                                <button id="fbutton" type="submit" class="btn btn-xl">Send Message</button>
                             </div>
                         </div>
                     </form>
@@ -591,12 +593,12 @@ des solutions informatiques.</h3>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <!--<script src="{% static 'js/jqBootstrapValidation.js' %}"></script>-->
-    <!--<script src="{% static 'js/contact_me.js' %}"></script>-->
+    <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
+    <script src="{% static 'js/contact_me.js' %}"></script>
 
     <!-- Theme JavaScript -->
     <script src="{% static 'js/agency.min.js' %}"></script>
-    <script src="{% static 'js/wt.js' %}"></script>
+    <!--<script src="{% static 'js/wt.js' %}"></script>-->
 
 </body>
 
