save Contact, contact email

--- a/intro/static/css/wt.css
+++ b/intro/static/css/wt.css
@@ -67,9 +67,9 @@
 }
 
 /* Partner */
-div.col-md-3.col-sm-6 {
+/*div.col-md-3.col-sm-6 {
     width: 100%;
-}
+}*/
 
 /*#partners {
     padding: 50px 0;
