--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -293,7 +293,7 @@ des solutions informatiques.</h3>
 
                 {% block content %}
 
-                    <form role="form" name="sentMessage" id="contactForm" novalidate method="post">
+                    <form role="form" name="sentMessage" id="contactForm" method="post">
 
                         {% csrf_token %}
 
@@ -335,8 +335,8 @@ des solutions informatiques.</h3>
                                 <!--<div class="g-recaptcha" data-sitekey="6Le5PQ4UAAAAAGZU8Wrffzkgc3DzBgtBWvU7RhSu"></div>-->
 
                                 <div class="form-group">
-                                {{ form.captcha.errors }}
-                                {{ form.captcha }}
+                                    {{ form.captcha.errors }}
+                                    {{ form.captcha }}
                                 <p class="help-block text-danger"></p>
                                 </div>
 
