--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -51,9 +51,9 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <!--<a class="navbar-brand page-scroll" href="#page-top">Wizards Technology</a>-->
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <img class="changesize" src="{% static 'img/logos/wt.png' %}">
+                <a id="brand-name" class="navbar-brand page-scroll" href="#page-top">Wizards Technology</a>
+                <a id="logo-scr" class="navbar-brand page-scroll" href="#page-top">
+                    <!--<img id="logo-scr" class="changesize" src="{% static 'img/logos/wt.png' %}">-->
                 </a>
             </div>
 
