make things better

--- a/intro/static/css/wt.css
+++ b/intro/static/css/wt.css
@@ -38,13 +38,15 @@
 #logo-scr {
     background-image: url("/static/img/logos/wt.png");
     background-repeat: no-repeat;
-    background-size: 200%;
+    background-size: 100%;
     background-position: bottom;
+    width: 60px;
+    margin: 0px;
 }
 
-@media (max-width: 480px) {
-    .changesize {
-        width: 45%;
+@media (min-width: 360px) and (max-width: 766px) {
+    #logo-scr {
+        width: 50px;
     }
 }
 
