--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -51,7 +51,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a id="brand-name" class="navbar-brand page-scroll" href="#page-top">Wizards Technology</a>
+                <a id="brand-name" class="navbar-brand page-scroll" href="#page-top" style="display:none">Wizards Technology</a>
                 <a id="logo-scr" class="navbar-brand page-scroll" href="#page-top">
                     <!--<img id="logo-scr" class="changesize" src="{% static 'img/logos/wt.png' %}">-->
                 </a>
