--- a/intro/static/css/wt.css
+++ b/intro/static/css/wt.css
@@ -40,8 +40,9 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: bottom;
-    width: 60px;
-    margin: 0px;
+    width: 108px;
+    margin: -7px 0px 0px 40px;
+    height: 88px;
 }
 
 @media (min-width: 360px) and (max-width: 766px) {
