--- a/intro/templates/intro/index.html
+++ b/intro/templates/intro/index.html
@@ -239,9 +239,56 @@ des partenaires qui leur offrent les meilleurs rapports qualité-prix.</h3>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Wizards Technology est une entreprise spécialisée dans la vente et le développement
-des solutions informatiques.</h3>
+                    <h3 class="section-subheading text-muted">Wizards Technology
+                       est une entreprise spécialisée dans la vente et le
+                       développement
+                       des solutions informatiques.</h3>
                 </div>
+            </div>
+            <div class="row row-content">
+              <div class="col-xs-12 col-sm-3">
+                <h4 align="center">Historique</h4>
+              </div>
+              <div class="col-xs-12 col-sm-9">
+                <p>
+                  Wizards Technology est une jeune entreprise créée le 24 Avril
+                   2016 et qui est spécialisée dans la vente et le
+                   développement des solutions informatiques qui ont pour but
+                   premier de rendre plus performant les départements
+                   informatiques. Le département informatique au sein d'une
+                   organisation occupe une place central. Cela est du a
+                   l'importance capital qu'est le sien dans le bon
+                   fonctionnement de l'organisation en générale. Au vue de cela
+                    il est primordiale qu'il se fasse accompagner par
+                    des prestataires efficace, diligent et soucieux du respect
+                    des normes de qualités. Voila ce que nous offrons a nos
+                    clients.
+                </p>
+              </div>
+            </div>
+            <div class="row row-content">
+              <div class="col-xs-12 col-sm-3">
+                <h4 align="center">Notre Vision</h4>
+              </div>
+              <div class="col-xs-12 col-sm-9">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Minima maxime quam architecto quo inventore harum ex magni,
+                  dicta impedit.
+                </p>
+              </div>
+            </div>
+            <div class="row row-content" style="border-bottom:none">
+              <div class="col-xs-12 col-sm-3">
+                <h4 align="center">Notre Mission</h4>
+              </div>
+              <div class="col-xs-12 col-sm-9">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Minima maxime quam architecto quo inventore harum ex magni,
+                  dicta impedit.
+                </p>
+              </div>
             </div>
         </div>
     </section>
@@ -253,17 +300,17 @@ des solutions informatiques.</h3>
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Our Partners</h2>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <a href="#">
                                 <img src="{% static 'img/logos/branding_lenovo-logo.jpg' %}" class="img-responsive img-centered" alt="">
                             </a>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <a href="#">
                                 <img src="{% static 'img/logos/branding_dell-logo.jpg' %}" class="img-responsive img-centered" alt="">
                             </a>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <a href="#">
                                 <img src="{% static 'img/logos/branding_hp-logo.jpg' %}" class="img-responsive img-centered" alt="">
                             </a>
@@ -371,13 +418,18 @@ des solutions informatiques.</h3>
 
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row row-footer">
                 <div class="col-md-4">
-                    <ul class="contacts">
-                        <li><i class="fa fa-envelope"><span>P.O. Box: 8994 Deido, Douala CM</span></i></li>
-                        <li><i class="fa fa-phone"><span>+237 334 156 55</span></i></li>
-                        <li><i class="fa fa-mobile"><span>+237 699 011 293</span></i></li>
-                    </ul>
+                  <h5>Our address</h5>
+                    <!--<ul class="contacts">-->
+                    <address>
+                      301 Rue Mandessi Bell Bali, Douala<br>
+                      CAMEROUN<br>
+                        <i class="fa fa-envelope">: 8994 Deido, Douala CM</i><br>
+                        <i class="fa fa-phone">: +237 334 156 55</i><br>
+                        <i class="fa fa-mobile">: +237 699 011 293</i><br>
+                    <!--</ul>-->
+                  </address>
                 </div>
                 {% now "Y" as current_year %}
                 <div class="col-md-4">
